azure/kubernetes/argocd-tailscale-ingress.yaml
apiVersion: tailscale.com/v1alpha1
kind: Ingress
metadata:
  name: argocd-tailscale
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: server
spec:
  ingressClassName: tailscale
  rules:
    - host: argocd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
